# Python_Project_Parsing

./: Dockerfile  README.md  app_logger.py  csv_rw.py  dict_new.py  list_parse.py  main.py  main2.py  package1.py  parse_bs4.py  pyproject.toml  requirements.txt  text_replace.py  vremy.py
.github/workflows/: pylint.yml
